src/objects/csordtelcoa__Orders_Subscriptions_Options__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>LG_OrderCanceledStatus__c</fullName>
        <defaultValue>&quot;Canceled&quot;</defaultValue>
        <description>Holds the value that would be set on the Order Status2 field when the Order is canceled.</description>
        <inlineHelpText>Holds the value that would be set on the Order Status2 field when the Order is canceled.</inlineHelpText>
        <label>Order Canceled Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_OrderCompleteStatus__c</fullName>
        <defaultValue>&quot;Closed&quot;</defaultValue>
        <description>Holds the value that will be set on the Status2 field of the Order when all suborders are complete.</description>
        <inlineHelpText>Holds the value that will be set on the Status2 field of the Order when all suborders are complete.</inlineHelpText>
        <label>Order Complete Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_OrderPartiallyCompletedStatus__c</fullName>
        <defaultValue>&quot;Some Suborders Completed&quot;</defaultValue>
        <description>Holds the value that would be set on the Order Status2 field when some of the suborders are complete, but not all of them.</description>
        <inlineHelpText>Holds the value that would be set on the Order Status2 field when some of the suborders are complete, but not all of them.</inlineHelpText>
        <label>Order Partially Completed Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ServiceDeactivatedStatus__c</fullName>
        <defaultValue>&quot;Inactive&quot;</defaultValue>
        <description>Value of the Service Status that defines Service is Deactivated</description>
        <label>Service Deactivated Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ServiceRequestDeactivateStatus__c</fullName>
        <defaultValue>&quot;Request for Deactivation&quot;</defaultValue>
        <description>Value of the Service Status that defines Service is Ready for Deactivation</description>
        <label>Service Request Deactivate Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_SubscriptionRequestDeactivateStatus__c</fullName>
        <defaultValue>&quot;Request for Deactivation&quot;</defaultValue>
        <description>Value of the Subscription Status that defines Subscription is Ready for Deactivation</description>
        <label>Subscription Request Deactivate Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Basket_Linked_To_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Basket Linked To Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Batch_Size__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Batch Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Create_Mac_Baskets_Button_Label__c</fullName>
        <defaultValue>&quot;Create MAC Basket&quot;</defaultValue>
        <label>Create Mac Baskets Button Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Create_Mac_Baskets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Mac Baskets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Create_Mac_Opportunities_Button_Label__c</fullName>
        <defaultValue>&quot;Create MAC Opportunity&quot;</defaultValue>
        <label>Create Mac Opportunities Button Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Create_Mac_Opportunities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Mac Opportunities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Disable_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Enforce_Synchronisation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enforce Synchronisation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Generate_Delta_On_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Delta On Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Generate_Orders_From_Basket__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Orders From Basket</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Generate_Orders_From_Bundle__c</fullName>
        <defaultValue>true</defaultValue>
        <description>&quot;Generate Orders from Basket&quot; overrides &quot;Generate Orders from Bundle&quot;</description>
        <inlineHelpText>&quot;Generate Orders from Basket&quot; overrides &quot;Generate Orders from Bundle&quot;</inlineHelpText>
        <label>Generate Orders From Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Initial_Mac_Opportunity_Stage__c</fullName>
        <defaultValue>&quot;Prospecting&quot;</defaultValue>
        <label>Initial Mac Opportunity Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Initiate_order_generation_manually__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, order generation will not be triggered automatically by the module</description>
        <inlineHelpText>If checked, order generation will not be triggered automatically by the module</inlineHelpText>
        <label>Initiate order generation manually</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__MACD_Opportunity_Record_Types__c</fullName>
        <inlineHelpText>Comma separated list of record types that can be used in a MACD process. If empty, all record types are used. Valid only if &apos;Use MACD Opportunity Record Types&apos; setting is set.</inlineHelpText>
        <label>MACD Opportunity Record Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Module_Debug_Prefix__c</fullName>
        <defaultValue>&quot;One Order per Root Configuration&quot;</defaultValue>
        <label>Order Generation Strategy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Module_Name__c</fullName>
        <defaultValue>&quot;CS Order Implementation Module Telco A&quot;</defaultValue>
        <label>Module Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Module_Version_Number__c</fullName>
        <defaultValue>&quot;1.0&quot;</defaultValue>
        <label>Module Version Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Opportunity_Stages_creating_orders__c</fullName>
        <defaultValue>&quot;Closed Won&quot;</defaultValue>
        <description>A comma separated list of opportunity stages which when set will trigger the creation of orders. It defaults to &quot;Closed Won&quot; if no value is entered</description>
        <inlineHelpText>A comma separated list of opportunity stages which when set will trigger the creation of orders. It defaults to &quot;Closed Won&quot; if no value is entered</inlineHelpText>
        <label>Opportunity Stages creating orders</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Order_Initial_State__c</fullName>
        <defaultValue>&quot;Order Submitted&quot;</defaultValue>
        <label>Order Initial State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Replacement_Subscription_Delivered_State__c</fullName>
        <inlineHelpText>Default is &quot;Delivered&quot;</inlineHelpText>
        <label>Replacement Subscription Delivered State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Revalidate_Cloned_Product_Configuration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If product configuration should be revalidated immediately, select this. Important: Revalidation is occurring in a batch. If you are cloning product configurations in a batch, you must uncheck this field.</description>
        <inlineHelpText>Revalidation is a process of re-running the defined rules on a cloned product configuration. Since it is a costly process, it is run in a batch. You can select for it to run immediately (checked) or leave it for a later time (unchecked).</inlineHelpText>
        <label>Revalidate Cloned Product Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Service_Final_States__c</fullName>
        <description>Comma separated list of final statuses.</description>
        <inlineHelpText>Comma separated list of statuses - once a service reaches one of these statuses, system should not change it since it is listed as final.</inlineHelpText>
        <label>Service Final States</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Service_Initial_State__c</fullName>
        <defaultValue>&quot;Service created&quot;</defaultValue>
        <label>Service Initial State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Service_Number_Prefix__c</fullName>
        <defaultValue>&quot;SVC-&quot;</defaultValue>
        <label>Service Number Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Statuses_Not_Allowing_Change__c</fullName>
        <description>Comma separated list of Subscription statuses not allowing change requests</description>
        <inlineHelpText>Comma separated list of Subscription statuses not allowing change requests</inlineHelpText>
        <label>Statuses Not Allowing Change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Statuses_Not_Allowing_In_Flight_Change__c</fullName>
        <description>Comma separated list of service statuses where In Flight change is not allowed</description>
        <inlineHelpText>Comma separated list of service statuses where In Flight change is not allowed</inlineHelpText>
        <label>Statuses Not Allowing In Flight Change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Subscription_Appending_Not_Allowed__c</fullName>
        <inlineHelpText>Comma separated list of opportunity stages where appending of additional subscriptions to opportunity is not possible. If left empty, it&apos;s disregarded.</inlineHelpText>
        <label>Subscription Appending Not Allowed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Subscription_Closed_Replaced_State__c</fullName>
        <inlineHelpText>Default &quot;Closed Replaced&quot;</inlineHelpText>
        <label>Subscription Closed Replaced State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Subscription_Initial_State__c</fullName>
        <defaultValue>&quot;Subscription created&quot;</defaultValue>
        <label>Subscription Initial State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Subscription_Number_Prefix__c</fullName>
        <defaultValue>&quot;SN-&quot;</defaultValue>
        <label>Subscription Number Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Use_Batch_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Batch Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Use_Opportunity_Record_Types__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Check this field to enable record type selection when creating a new MACD opportunity</inlineHelpText>
        <label>Use Opportunity Record Types</label>
        <type>Checkbox</type>
    </fields>
    <label>Orders &amp; Subscriptions Options</label>
</CustomObject>